fixed single product content panel spacing

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1081,8 +1081,7 @@ a:focus,.focus a{
 		}
 		.product{
 			overflow: visible;
-			width: 100%;
-			
+			width: 100% !important;
 			.bundle_form{
 				float: left;
 				.price{
